--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "start": "cd src && node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "emertechie@gmail.com",
